fix: Change color for the .color CSS class for A11y purpose (contrast)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,3 +60,7 @@ h1 {
 .bn.br--left.br1.ph2:focus {
     outline: none;
 }
+
+.orange {
+    color: #a52607;
+}
